styles.css
* {
  background-color: #2B2733;
}
body,
html {
    font-family: 'Montserrat', sans-serif;
    margin: 0;
}

header {
    background-color: #46424D;
    color: white;
    padding: 15px;
    text-align: center;
    text-transform: uppercase;
}
h1 {
  background-color: #46424D;
}

.title {
    margin: 0;
}

.study-button, .meditate-button, .exercise-button {
  border: white 3px solid;
  width: 150px;
  height: 75px;
}
.category-buttons {
  display: flex;
  justify-content: space-around;
}

.site-left-main {
    background-color: #2B2733;
    border-right: 1px solid grey;
    color: white;
    width: 70%;
}

.site-left-box {
    height: 100%;
    background-color: #46424D;
}

.site-right-main {
    background-color: #2B2733;
    border-left: 1px solid grey;
    width: 30%;
}

